--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -85,7 +85,7 @@
             </a>
         </div>
         <div class="col s10 center" ng-if="periodicity=='quarter'">
-            <h5 class="red-text text-lighten-1">{{periodicityActive.startDate}} - {{periodicityActive.endDate}}</h5>
+            <h5 class="red-text text-lighten-1">{{periodicityActive.label}}</h5>
         </div>
         <div class="col s1 center" ng-if="periodicity=='quarter'">
             <a href="" ng-click="nextQuarter()" class="btn-floating red lighten-1 right white-text">
