mainAgenda Responsive Web Design + i18n

--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -74,15 +74,18 @@
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-home left"></i>
                         {{'headerMenu.dashboard' | translate }}</a></li>
                     <li class="divider"></li>
+                    <!--
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-envelope left"></i>
                         {{'headerMenu.notification' | translate }}</a></li>
+                    -->
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-bar-chart left"></i>
                         {{'headerMenu.stats' | translate }}</a></li>
                     <li><a href="#/private/effective/{{user.effectiveDefault}}" class="white-text light"><i class="mdi-social-people left"></i>
                         {{'headerMenu.effective' | translate }}</a></li>
+                    <!--
                     <li><a href="#/private/" class="white-text light"><i class="mdi-image-timer left"></i>
                         {{'headerMenu.training' | translate }}</a></li>
-                    <!--
+                    
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-trophy left"></i>
                         {{'headerMenu.championship' | translate }}</a></li>
                     -->
@@ -101,20 +104,23 @@
     <nav class="green darken-1 hide-on-med-and-down visible-nav" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
-                <ul>
+                <ul class="center">
+                    <!--
                     <li><a href="#/private/" class="light"><i class="fa fa-envelope left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.notification"></span>
                     </a></li>
+                    -->
                     <li><a href="#/private/" class="light"><i class="fa fa-bar-chart left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.stats"></span></a>
                     </li>
                     <li><a href="#/private/effective/{{user.effectiveDefault}}" class="light"><i class="mdi-social-people left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.effective"></span></a>
                     </li>
+                    <!--
                     <li><a href="#/private/" class="light"><i class="mdi-image-timer left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.training"></span></a>
                     </li>
-                    <!--
+                    
                     <li><a href="#/private/" class="light"><i class="fa fa-trophy left"></i>
                         <span class="hide-on-med-and-down" translate="headerMenu.championship"></span></a>
                     </li>
