--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -181,54 +181,53 @@
         </div>
     </div>
     
-    <div class="row">    
-        <div class="col s12">    
-            <ul>                
-                <li class="col s12 m3" ng-repeat="currentEvent in events | filter:query">
-                    <div class="card white">
-                        <!-- cup -->
-                        <div class="card-content cyan darken-1 white-text flow-text" ng-show="currentEvent.link.type=='cup'">
-                            <h5><i class="material-icons">album</i> {{'mainAgenda.eventType.cup' | translate }}</h5>
+    <div class="row">      
+        <ul>                
+            <li class="col s12 m3" ng-repeat="currentEvent in events | filter:query">
+                <div class="card white">
+                    <!-- cup -->
+                    <div class="card-content cyan darken-1 white-text flow-text" ng-show="currentEvent.link.type=='cup'">
+                        <h5><i class="material-icons">album</i> {{'mainAgenda.eventType.cup' | translate }}</h5>
 
-                            <h6>{{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</h6>
-                            <hr class="white" />
-                            <h5 class="small blue-grey-text text-darken-2">{{currentEvent.startDate}}</h5>
-                        </div>
-                        <!-- friendlyGame -->
-                        <div class="card-content light-green lighten-1 white-text flow-text" ng-show="currentEvent.link.type=='friendlyGame'">
-                            <h5><i  class="material-icons">flare</i> {{'mainAgenda.eventType.friendlyGame' | translate }}</h5>
-                   
-                            <h6>{{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</h6>
-                            <hr class="white" />
-                            <h5 class="small blue-grey-text text-darken-2">{{currentEvent.startDate}}</h5>
-                        </div>
-                        <!-- championship -->
-                        <div class="card-content  red lighten-2 white-text flow-text" ng-show="currentEvent.link.type=='championship'">
-                            <h5><i class="material-icons">stars</i> {{'mainAgenda.eventType.championship' | translate }}</h5>
-                         
-                            <h6>{{currentEvent.participants.teamHome}} - {{currentEvent.participants.teamVisitor}}</h6>
-                            <hr class="white" />
-                            <h5 class="small blue-grey-text text-darken-2">{{currentEvent.startDate}}</h5>
-                        </div>
-                        <!-- training -->
-                        <div class="card-content  blue lighten-2 white-text flow-text" ng-show="currentEvent.link.type=='training'">
-                            <h5><i class="material-icons">timer</i>{{'mainAgenda.eventType.training' | translate }}</h5>
-                         
-                            <h6>{{currentEvent.address.formatedAddress}}</h6>
-                            <hr class="white" />
-                            <h5 class="small blue-grey-text text-darken-2">{{currentEvent.startDate}}</h5>
-                        </div>
-                        
-                        <div class="card-action white">
-                            <a href="#/private/updateEvent/{{currentEvent._id}}" class="red-text text-lighten-1 center tooltipped" 
-                                data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.updateEvent' | translate }}">
-                                <i class="material-icons">mode_edit</i>
-                            </a>
-                        </div>
+                        <h6>{{currentEvent.participants.teamHome.label}} - {{currentEvent.participants.teamVisitor.label}}</h6>
+                        <hr class="white" />
+                        <h5 class="small blue-grey-text text-darken-2">{{currentEvent.startDate}}</h5>
                     </div>
-                </li>
-            </ul>
-        </div>
+                    <!-- friendlyGame -->
+                    <div class="card-content light-green lighten-1 white-text flow-text" ng-show="currentEvent.link.type=='friendlyGame'">
+                        <h5><i  class="material-icons">flare</i> {{'mainAgenda.eventType.friendlyGame' | translate }}</h5>
+
+                        <h6>{{currentEvent.participants.teamHome.label}} - {{currentEvent.participants.teamVisitor.label}}</h6>
+                        <hr class="white" />
+                        <h5 class="small blue-grey-text text-darken-2">{{currentEvent.startDate}}</h5>
+                    </div>
+                    <!-- championship -->
+                    <div class="card-content  red lighten-2 white-text flow-text" ng-show="currentEvent.link.type=='championship'">
+                        <h5><i class="material-icons">stars</i> {{'mainAgenda.eventType.championship' | translate }}</h5>
+
+                        <h6>{{currentEvent.participants.teamHome.label}} - {{currentEvent.participants.teamVisitor.label}}</h6>
+                        <hr class="white" />
+                        <h5 class="small blue-grey-text text-darken-2">{{currentEvent.startDate}}</h5>
+                    </div>
+                    <!-- training -->
+                    <div class="card-content  blue lighten-2 white-text flow-text" ng-show="currentEvent.link.type=='training'">
+                        <h5><i class="material-icons">timer</i>{{'mainAgenda.eventType.training' | translate }}</h5>
+
+                        <h6>{{currentEvent.address.formatedAddress}}</h6>
+                        <hr class="white" />
+                        <h5 class="small blue-grey-text text-darken-2">{{currentEvent.startDate}}</h5>
+                    </div>
+
+                    <div class="card-action white">
+                        <a href="#/private/updateEvent/{{currentEvent._id}}" class="red-text text-lighten-1 center tooltipped" 
+                            data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.updateEvent' | translate }}">
+                            <i class="material-icons">mode_edit</i>
+                        </a>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
     </div>
     
 <!-- body end-->
