--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -8,15 +8,15 @@
         </div>
         
         <!-- effective list -->
-        <ul id="effectiveList" class="dropdown-content">
+        <ul id="mainAgendaEffectiveListSmall" class="dropdown-content">
             <li ng-repeat="effective in effectives">
                 <a href="#/private/agenda/{{effective._id}}"><h6 class="blue-grey-text text-darken-2">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
                 <div class="divider"></div>
             </li>
         </ul>
         
-        <div class="col s12" ng-if="effectives.length > 1">
-            <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="effectiveList">
+        <div class="col s12" ng-show="effectives.length > 1">
+            <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="mainAgendaEffectiveListSmall">
                 {{'mainAgenda.buttons.dropdownEffective' | translate }} &nbsp;&nbsp;&nbsp;&nbsp;
                 <i class="material-icons right">arrow_drop_down</i>
             </a>
@@ -113,15 +113,15 @@
         </div>
         
         <!-- effective list -->
-        <ul id="effectiveList" class="dropdown-content">
+        <ul id="mainAgendaEffectiveList" class="dropdown-content">
             <li ng-repeat="effective in effectives">
                 <a href="#/private/agenda/{{effective._id}}"><h6 class="blue-grey-text text-darken-2">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
                 <div class="divider"></div>
             </li>
         </ul>
         
-        <div class="col s12" ng-if="effectives.length > 1">
-            <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="effectiveList">
+        <div class="col s12" ng-show="effectives.length > 1">
+            <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="mainAgendaEffectiveList">
                 {{'mainAgenda.buttons.dropdownEffective' | translate }} &nbsp;&nbsp;&nbsp;&nbsp;
                 <i class="material-icons right">arrow_drop_down</i>
             </a>
