--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -106,7 +106,7 @@
             <a ng-click="getCurrentSeason()" class="btn-flat white-text waves-effect waves-light">{{'mainAgenda.periodicity.season' | translate }}</a>
         </div>
         <div class="col m1 right">
-            <a href="#/private/addEvent/{{meta._id}}" class="red-text text-lighten-1 tooltipped" 
+            <a href="#/private/addEvent/{{effectiveId}}" class="red-text text-lighten-1 tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainAgenda.buttons.addEvent' | translate }}">
                     <i class="fa fa-plus-square-o fa-3x"></i>
             </a>
